# recce-claude-plugin

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.beads/: issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: bundle-freshness.yml  publish-docs-mcp.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/03-two-tier-trigger-hooks/: 03-01-SUMMARY.md  03-02-SUMMARY.md
.planning/phases/05-recce-review-command/: 05-01-SUMMARY.md
commands/: recce-check.md  recce-setup.md
docs/: .gitkeep
docs/scenario-pipeline/: README.md  exclude-zero-orders-v1.md  financial-columns-wrong-formula.md  status  tax-summary-wrong-base.md
docs/specs/: 2026-03-23-impact-analysis-design.md
evals/agent-blind-spots/: ENFORCEMENT.md  README.md  RUBRIC.md  build_fixtures.sh
plugins/recce/: .mcp.json  README.md
plugins/recce-dev/: .mcp.json  LICENSE  README.md
plugins/recce-quickstart/: .mcp.json
scripts/: check-bundle-freshness.sh  check-mcp.sh  install-hooks.sh  start-mcp.sh
scripts/hooks/: pre-push
tests/: test-resolve-recce-root.sh  test_intent_routing.py  test_merged_bootstrap.py
tests/e2e/: e2e-report.md  e2e-scenario.md
tests/fixtures/: trigger_phrases.txt
tests/recce-eval/: test-run-case-args.sh  test-score-deterministic.sh
tests/smoke/: test-marketplace-install.sh  test-recce-review-skill.sh  test-reviewer-agent.sh  test-session-start.sh  test-trigger-hooks.sh
tests/unit/: cat-references.test.ts  skill-content.test.ts
(+235 files in other folders)
